--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@unocss/reset": "^0.51.13",
     "@vueuse/core": "^10.1.2",
     "@vueuse/head": "^1.1.26",
+    "monaco-editor-vue3": "^0.1.6",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-demi": "^0.14.1",
