--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@unocss/reset": "^0.51.13",
     "@vueuse/core": "^10.1.2",
     "@vueuse/head": "^1.1.26",
+    "chart.js": "^4.3.0",
     "monaco-editor-vue3": "^0.1.6",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
+    "vue-chart-3": "^3.1.8",
     "vue-demi": "^0.14.1",
     "vue-router": "^4.2.0"
   },
